<resources>
    <string name="app_name">E Learning App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="all_courses">All Courses</string>
    <string name="see_all">See All</string>
    <string name="courses">Courses</string>
    <string name="search">Search</string>
    <string name="harvard_university">Harvard University</string>
    <string name="professional_certificate">Professional Certificate</string>
    <string name="computer_science_for_web_programming">Computer Science for Web Programming</string>
    <string name="e_learning_acadmey">E Learning Academy</string>
    <string name="about_this_course">About this course</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="start_course">Start Course</string>
    <string name="added">Added to Cart</string>
    <string name="what_do_you_want_to_learn">What do you want to learn?</string>
    <string name="trending">Trending:</string>
    <string name="python">Python</string>
    <string name="cyber_security">Cyber Security</string>
    <string name="data_sciences">Data Sciences</string>
</resources>