<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HomeScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/cartBtn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Main Header Text -->
                <TextView
                    android:id="@+id/headerText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:lineSpacingExtra="4dp"
                    android:text="Build skills,\nEarn a certificate,\nAdvance your career"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Search EditText -->
                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/search_background"
                    android:hint="@string/what_do_you_want_to_learn"
                    android:paddingStart="@dimen/_12ssp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:textColor="#333333"
                    android:textColorHint="#BBBBBB"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toStartOf="@+id/searchButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/headerText"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/searchButton"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/search_bg"
                    android:gravity="center"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@id/searchEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/searchEditText" />

                <TextView
                    android:id="@+id/trendingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/trending"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/searchEditText" />

                <LinearLayout
                    android:id="@+id/trendingTagsLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/trendingText">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:background="@drawable/tag_background"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/python"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                    <!-- Tag: Excel -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:background="@drawable/tag_background"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/cyber_security"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:background="@drawable/tag_background"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/data_sciences"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/favoriteCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:minHeight="@dimen/_200sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topLayout"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/favoriteBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/courses"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_16sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/seeAllFavoriteBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/see_all"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewCourses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/favoriteBook"
                        tools:listitem="@layout/course_item" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
